--- a/inst/book/metodologia.qmd
+++ b/inst/book/metodologia.qmd
@@ -146,18 +146,18 @@ No final, o gerador retorna a imagem, que é a única informação enviada ao ag
 
 #### Oráculo {#sec-oraculo}
 
-Para definir o oráculo, utilizou-se uma terminologia que é facilmente encaixada com a teoria de aprendizado fracamente supervisionado. Seja $g$ um classificador utilizado para predizer o rótulo de uma imagem e seja $\mathbf x_{n+1}$ uma nova imagem que é observada, com sua resposta $\mathbf Y_{n+1}$, desconhecida. A operação $g(\mathbf x_{n+1}) = \hat {\mathbf Y}_{n+1}$ retorna um candidato para $\mathbf Y_{n+1}$, que pode estar correto ou errado.
+Para definir o oráculo, utilizou-se uma terminologia que é facilmente encaixada com a teoria de aprendizado fracamente supervisionado. Neste caso, para facilitar a notação, considera-se uma resposta como uma variável multinomial, sem ser multivariada, denotada por $y$. Seja $f$ um classificador utilizado para predizer o rótulo de uma imagem e seja $\mathbf x_{n+1}$ uma nova imagem que é observada, com sua resposta $y_{n+1}$, desconhecida. A operação $f(\mathbf x_{n+1})$ retorna um candidato para $y_{n+1}$, que pode estar correto ou errado.
 
-O oráculo é uma função $\mathcal O: \mathcal Y \rightarrow 2^{\mathcal Y}$, que recebe um elemento do domínio da resposta $\mathcal Y$ (do conjunto de todas as combinações de rótulos) para o conjunto de subconjuntos (partes) de $\mathcal Y$. Na prática, a função retorna uma lista de possíveis valores de ${\mathbf Y}_{n+1}$, da seguinte forma:
+O oráculo é uma função $\mathcal O: \mathcal Y \rightarrow 2^{\mathcal Y}$, que recebe um elemento do domínio da resposta $\mathcal Y$ (do conjunto de todas as combinações de rótulos) para o conjunto de subconjuntos (partes) de $\mathcal Y$. Na prática, a função retorna uma lista de possíveis valores de ${y}_{n+1}$, da seguinte forma:
 
 $$
-\mathcal O(g(\mathbf x_{n+1})) = \left\{\begin{array}{ll}
-    \{\mathbf Y_{n+1}\}, & \text{ se } \mathbf Y_{n+1} = \hat {\mathbf Y}_{n+1}  \\
-    \mathcal Y \setminus \{\hat {\mathbf Y}_{n+1}\}, & \text{ se } \mathbf Y_{n+1} \neq \hat {\mathbf Y}_{n+1}
+\mathcal O(f(\mathbf x_{n+1})) = \left\{\begin{array}{ll}
+    \{ y_{n+1}\}, & \text{ se } y_{n+1} = f(\mathbf x_{n+1})  \\
+    \mathcal Y \setminus \{f(\mathbf x_{n+1})\}, & \text{ se } y_{n+1} \neq f(\mathbf x_{n+1})
 \end{array}\right.
 $$
 
-Quando o classificador $g$ acerta o rótulo, o oráculo retorna o valor "1", acompanhado de uma lista que contém apenas um elemento: o próprio rótulo. Quando o classificador $g$ retorna o rótulo errado, o oráculo retorna o valor "0", acompanhado de uma lista com todos os outros possíveis rótulos do rótulo, o que inclui o verdadeiro valor $\mathbf Y_{n+1}$. Para simplificar, também é possível utilizar a notação de *rótulo complementar* $\bar{\mathbf Y} = \mathcal Y \setminus \{ \hat {\mathbf Y}_{n+1}\}$
+Quando o classificador $f$ acerta o rótulo, o oráculo retorna o valor "1", acompanhado de uma lista que contém apenas um elemento: o próprio rótulo. Quando o classificador $f$ retorna o rótulo errado, o oráculo retorna o valor "0", acompanhado de uma lista com todos os outros possíveis rótulos do rótulo, o que inclui o verdadeiro valor $y_{n+1}$. Para simplificar a notação, também é possível chamar essa informação como o *rótulo complementar* $\bar{\mathbf y} = \mathcal Y \setminus \{ \hat {y}_{n+1}\}$. Neste caso utiliza-se o símbolo $\bar{\mathbf y}$, indicando que é uma lista valores possíveis de $y$.
 
 A @fig-esquema-oraculo mostra o funcionamento do oráculo no exemplo do TJMG. Quando a predição é igual ao rótulo, o resultado apresentado é o valor "1", indicando que o rótulo está correto. Quando a predição é diferente do rótulo, o resultado apresentado é o valor "0", indicando que o valor testado está incorreto e que, portanto, o rótulo real é um dentre todos os outros possíveis rótulos.
 
@@ -167,16 +167,16 @@ A @fig-esquema-oraculo mostra o funcionamento do oráculo no exemplo do TJMG. Qu
 knitr::include_graphics("assets/img/esquema-oraculo.png")
 ```
 
-É possível generalizar naturalmente o oráculo para Captchas que aceitam múltiplos chutes mudando a definição da função que faz predições. Seja $h$ uma função que retorna um conjunto de $k$ respostas possíveis, $k\in \mathbb N$, $k\geq 1$, com $\mathbf x_{n+1}$ e $\mathbf y_{n+1}$ iguais aos definidos anteriormente. Então o oráculo tem o funcionamento definido abaixo:
+É possível generalizar naturalmente o oráculo para Captchas que aceitam múltiplos chutes mudando a definição da função que faz predições. Seja $\mathbf f$ uma função que retorna um conjunto de $k$ respostas possíveis, $k\in \mathbb N$, $k\geq 1$, com $\mathbf x_{n+1}$ e $y_{n+1}$ iguais aos definidos anteriormente. Então o oráculo tem o funcionamento definido abaixo:
 
 $$
-\mathcal O(h(\mathbf x_{n+1})) = \left\{\begin{array}{ll}
-    \{\mathbf Y_{n+1}\}, & \text{ se } \mathbf Y_{n+1} \in h(\mathbf x_{n+1})  \\
-   \mathcal Y \setminus h(\mathbf x_{n+1}), & \text{ se } \mathbf Y_{n+1} \notin h(\mathbf x_{n+1})
+\mathcal O(\mathbf f(\mathbf x_{n+1})) = \left\{\begin{array}{ll}
+    \{y_{n+1}\}, & \text{ se } y_{n+1} \in \mathbf f(\mathbf x_{n+1})  \\
+   \mathcal Y \setminus \mathbf f(\mathbf x_{n+1}), & \text{ se } y_{n+1} \notin \mathbf f(\mathbf x_{n+1})
 \end{array}\right..
 $$
 
-Nesse caso, o oráculo também retorna uma lista com a resposta $\mathbf Y_{n+1}$. A única diferença é que, quando o Captcha aceita múltiplos chutes, a lista retornada em caso de erro tem um comprimento menor.
+Nesse caso, o oráculo também retorna uma lista contendo a resposta $y_{n+1}$, além de outros valores. A única diferença é que, quando o Captcha aceita múltiplos chutes, a lista retornada em caso de erro tem um comprimento menor.
 
 O oráculo tem um papel fundamental na elaboração do método WAWL. O fato do oráculo sempre retornar a resposta correta na lista de opções faz com que ele necessariamente reduza o espaço de respostas a serem buscadas em uma tentativa futura.
 
@@ -560,7 +560,7 @@ onde $m$ e $v$ são médias móveis para atualização dos parâmetros, ponderan
 
 Ainda que o ADAM seja um método adaptativo, pode ser vantajoso considerar uma taxa de decaimento no parâmetro $\eta$. Esse fator pode ser desnecessário em alguns casos, mas pode auxiliar o modelo a dar passos menores quando o modelo já está com uma acurácia razoável. Neste trabalho, foram consideradas alguns valores de decaimento na taxa de aprendizado, como `1%` ou `3%` de decaimento ao final de cada época.
 
-### Aprendizado estatístico
+### Aprendizado estatístico {#sec-aprendizado-estatistico}
 
 Apresentados o objeto de estudo e as redes neurais utilizadas, passa-se a discutir o significado disso tudo no contexto de aprendizado estatístico. Essa parte foi escrita para proporcionar a base teórica para apresentar o modelo WAWL.
 
@@ -568,23 +568,23 @@ O aprendizado fracamente supervisionado pode ser dividido em três tipos princip
 
 A área de PLL não é nova [@grandvalet2002] e aparece com outros nomes, como aprendizado com rótulos ambiguos [@hullermeier2006] e aprendizado de rótulos em superconjuntos (*superset-label learning)* [@liu2012]. Um caso particular de PLL, aplicável ao tema do Captcha são rótulos complementares [@ishida2017], que considera os chutes errados na notação do problema.
 
-As definições seguem uma terminologia adaptada a partir da leitura de @jin2002, @cour2011 e @feng2020. Sempre que possível, os casos são adaptados para o problema do Captcha diretamente. Quando necessário, apresenta-se primeiro a definição genérica e depois a formulação para o Captcha.
+As definições seguem uma terminologia adaptada a partir da leitura de @jin2002, @cour2011 e @feng2020. Sempre que possível, os casos são adaptados para o problema do Captcha diretamente. Para simplificar a notação, no entanto, foi considerado o problema univariado do Captcha, ou seja, como se uma imagem tivesse apenas uma letra. Não há perda de generalidade nessa escolha, já que o problema do Captcha pode ser, de fato, separado em vários problemas, um para cada letra da imagem.
 
-Em um problema de aprendizado supervisionado tradicional, tem-se um conjunto de casos rotulados $S=\{(\mathbf x_i,y_i), i=1,\dots, m\}$ com uma distribuição $p(\mathbf x,y)$ desconhecida, onde $\mathbf x\in \mathcal X$ é uma imagem e $y \in \mathcal Y$ é o rótulo, que possui $|\mathcal A|^L$ possíveis valores. O objetivo é obter um classificador $g$ que leva um valor de $\mathbf x$ para o rótulo correto $y$.
+Em um problema de aprendizado supervisionado tradicional, tem-se um conjunto de $S$ casos rotulados $\{(\mathbf x_i,y_i), i=1,\dots, S\}$ com uma distribuição $p(\mathbf x,y)$ desconhecida, onde $\mathbf x$ é uma imagem e $y$ é o rótulo, que possui $|\mathcal A|$ possíveis valores. O objetivo é obter um classificador $f$ que leva um valor de $\mathbf x$ para o rótulo correto $y$.
 
 Para delimitar se o classificador está bom ou ruim, utiliza-se uma função de perda. No caso do Captcha, como o interesse é simplesmente acertar o rótulo inteiro (não importa se o classificador acerta só uma parte do rótulo), utiliza-se uma função chamada 0-1:
 
 $$
-\mathcal L(g(\mathbf x),\mathbf y) = I (g(\mathbf x) \neq \mathbf y),
+\mathcal L(f(\mathbf x),y) = I (f(\mathbf x) \neq y),
 $$ {#eq-perda}
 
-em que $I(\cdot)$ é uma função indicadora. Como a função de perda é aplicada a apenas um par $(\mathbf x,y)$, define-se formalmente que o objetivo do problema de aprendizado é minimizar o *risco*, que é o valor esperado da função de perda:
+em que $I(\cdot)$ é uma função indicadora. Como a função de perda é aplicada a apenas um par $(\mathbf x,y)$, define-se que o objetivo do problema de aprendizado é minimizar o *risco*, que é o valor esperado da função de perda, calculado para as variáveis aleatórias $\mathbf X$ e $Y$:
 
 $$
 \mathcal R(g) = \mathbb E_{p(\mathbf x,y)}[\mathcal L(g(\mathbf X),Y)].
 $$ {#eq-risco}
 
-A função de risco, no entanto, não é observada, já que depende da distribuição desconhecida de $p(\mathbf x,y)$. Por isso, utiliza-se um estimador do risco, que pode ser calculado em bases usadas na validação cruzada e na base de teste. Para uma base com $S$ observações, tem-se
+A função de risco, no entanto, não é observada, já que depende da distribuição desconhecida de $p(\mathbf x,y)$. Por isso, utiliza-se um estimador do risco, que pode ser calculado em uma amostra, como uma base usada na validação cruzada ou na base de teste. Para uma amostra com $S$ observações, tem-se
 
 $$
 \hat{\mathcal R}(g) = \sum_{s=1}^S \mathcal L(g(\mathbf x_s),y_s))
@@ -592,29 +592,74 @@ $$
 
 Na base de teste, utilizada para estimar o risco, a função de perda 0-1 é apropriada. Na etapa de validação cruzada de um modelo de aprendizado profundo, é útil considerar uma função de perda que seja contínua e derivável, funcionando como uma versão suavizada da perda 0-1. A partir de um vetor de parâmetros $\boldsymbol \theta$ originados da arquitetura do modelo, uma escolha de função de perda é a entropia cruzada, como na @eq-perda-crossentropy. Os parâmetros são estimados a partir de um otimizador, como o ADAM, apresentado na @sec-otimizador.
 
-As definições começam a precisar de ajustes quando $y$ deixa de ser um rótulo fixado. Como descrito na @sec-oraculo, a base de dados observada contém tanto rótulos observados de forma exata quanto rótulos apenas parcialmente informados. Nesse caso, os dados são gerados por uma distribuição
+As definições começam a precisar de ajustes quando $y$ deixa de ser um rótulo fixado. Como descrito na @sec-oraculo, quando o modelo inicial erra, o que se observa é uma lista de possíveis valores para $y$, que contém o rótulo correto e outros incorretos. Se o Captcha aceita apenas um chute, essa lista contém todos os possíveis valores do rótulo, menos o valor incorreto que foi utilizado no oráculo. Se o Captcha aceita vários chutes, a lista contém todos os valores possíveis de $y$ menos os valores que foram testados.
+
+Para isso, utiliza-se a notação do $\bar {\mathbf y}$. A notação utiliza negrito para enfatizar que o objeto contém uma lista de possíveis valores, e não apenas um valor. Por exemplo, considere $\mathcal A = \{0,1,\dots,9\}$ um alfabeto com os algarismos de zero até nove, como no MNIST, e um Captcha que aceita múltiplos chutes. Nesse caso, 
+
+Para uma imagem $\mathbf x$ com rótulo $3$, seguindo as definições da @sec-definicao-captcha, o valor de $y$ seria dado pela matriz
 
 $$
-p(\mathbf x, y,\bar{\mathbf y})=p(\mathbf x, y)p(\bar{\mathbf y}|\mathbf x, y),
+y = [0\;0\;0\;1\;0\;0\;0\;0\;0\;0],
 $$
 
-em que $\bar{\mathbf y}$ é um conjunto de rótulos *incorretos*. Nesse caso observam-se, além das instâncias $(\mathbf x_s, y_s)$ quando o modelo inicial acerta, as instâncias $(\mathbf x_v, \bar{\mathbf {y}}_v)$ quando o modelo inicial erra. Supondo que $\bar{\mathbf y}$ é condicionalmente independente de ${\mathbf x}$ dado ${\mathbf y}$, temos que
+sendo o valor $3$ colocado na quarta posição da primeira (e única) linha da matriz. Como o problema está sendo trabalhado na forma univariada, para simplificar a notação, pode-se considerar apenas os valores dos rótulos, ou seja, $y=3$.
+
+Considere, agora, que o modelo inicial produziu as tentativas incorretas $\mathbf h(\mathbf x) = \{6,8\}$. O valor observado $\bar{\mathbf y}$ envolve todos os valores de $y$ menos as tentativas incorretas:
 
 $$
-p(\mathbf x, y,\bar{\mathbf y})=p(\mathbf x, y)p(\bar{\mathbf y}| y).
+\bar{\mathbf y} = \{0,1,2,3,4,5,7,9\}.
 $$
 
-No caso dos Captchas, essa suposição é verificada. A probabilidade do modelo inicial errar depende apenas do rótulo e não das distorções realizadas pela imagem gerada a partir do rótulo. Além disso, a partir do modelo inicial, é possível estimar os valores de $p(\bar{\mathbf y}| y)$ a partir da base de teste utilizada para medir a acurácia do modelo.
+Na prática, o que se observa, então, são pares $(\mathbf x,y)$, nos casos corretos, ou pares $(\mathbf x,\bar{\mathbf y})$, nos casos incorretos. Para generalizar a notação, é possível considerar uma variável indicadora de acerto do modelo inicial $z$ e a lista $\mathbf y$, definida da seguinte forma:
 
-Em Captchas que aceitam apenas um chute, as probabilidades $p(\bar{\mathbf y}| y)$ podem ser organizadas em uma matriz de transição $\mathbf Q$, contendo as probabilidades de se obter um rótulo incorreto para cada possível valor do rótulo. Para resolver problemas desse tipo, é possível realizar um ajuste na função de predição que a torna a função de perda consistente e com taxa de convergência conhecida [@yu2018]:
+$$
+\mathbf y = \left\{\begin{array}{cl}\{y\}&,\text{ se }z=1\\\bar{\mathbf y}&,\text{ se }z=0\end{array}\right.
+$$
+
+Assim, observa-se uma amostra de $\{(\mathbf x_s,\mathbf y_s, z_s)\}, s = 1,\dots,S$. A distribuição desses dados está diretamente relacionada com a acurácia do modelo inicial. Por exemplo, se o modelo inicial acerta todos os chutes, o resultado será sempre o valor correto $y$, e o problema recai em um caso supervisionado tradicional. Quando o modelo inicial erra todos os casos, todos os rótulos são parciais e o problema recai em um caso de PLL puro. Na prática, o que se espera é que a amostra tenha uma mistura de rótulos corretos e de rótulos parciais.
+
+É possível desconsiderar o valor $z$ na notação. Como os rótulos parciais sempre incluem o rótulo correto $y$, quanto o conjunto contém apenas um elemento, este é o rótulo correto. Ou seja:
+
+$$
+z=1 \iff |\mathbf y|=1.
+$$
+
+Portanto, basta considerar os pares $(\mathbf x_s, \mathbf y_s)$ da amostra para definir o problema. Definida a estrutura de dados da amostra, passa-se a discutir a forma de obter um classificador com boas propriedades.
+
+Uma estratégia eficaz para derivar propriedades de classificadores na área de PLL é escrever a distribuição dos dados de forma explícita [@ishida2017, @yu2018, @feng2020, @feng2020a]. A partir dessa distribuição, a função de risco do problema completamente supervisionado é reescrita em termos da função de risco do problema com rótulos parciais. Depois, é criado um estimador para essa função de risco, a partir de uma amostra observada. Finalmente, utilizando funções de perda adequadas, demonstra-se que a função de risco do problema com rótulos parciais se aproxima da função de risco com dados completamente supervisionados, conforme a base de dados aumenta.
+
+A forma mais fácil de definir a distribuição dos dados com rótulos parciais é considerando que os valores dos rótulos parciais aparecem ao acaso. Por exemplo, considere que as imagens são geradas com uma distribuição $p(\mathbf x, y)$, que não precisa ser conhecida. Então a distribuição dos rótulos parciais $\tilde p (\mathbf x, \mathbf y)$ é dada por [@feng2020]:
+
+$$
+\tilde p (\mathbf x, \mathbf y) = \sum_{y}p(\mathbf y|y)p(\mathbf x, y), \text{ onde } p(\mathbf y|y)=\left\{\begin{array}{ll}\frac{1}{2^{|\mathcal A|-1}-1},&\text{ se } y\in\mathbf y,\\0,&\text{ se } y\notin \mathbf y\end{array}\right..
+$$ {#eq-distribuicao}
+
+A distribuição pode ser interpretada da seguinte forma. Os valores possíveis de $\mathbf y$ são todos os possíveis subconjuntos do alfabeto, menos os casos extremos (vazio e o alfabeto completo). Por exemplo, no caso de um alfabeto com os 10 algarismos, os valores de $\mathbf y$ podem ser todas as combinações dos algarismos, menos o conjunto vazio e o conjunto $\{0,\dots,9\}$. Isso dá $2^{|\mathcal A|}-2$ combinações no total.
+
+Considerando a restrição de PLL de que a resposta $\mathbf y$ sempre contém o verdadeiro rótulo, é intuitivo que $p(\mathbf y|y)=0$ quando $y\notin \mathbf y$. Ou seja, a probabilidade de observar $\mathbf y$ quando se sabe que um $y$ foi observado e este $y$ não está no conjunto $\mathbf y$ é zero. Agora, quando $y \in \mathbf y$, a probabilidade é calculada considerando todos os possíveis subconjuntos do alfabeto que contêm $y$, que são $2^{|\mathcal A|-1}-1$. Por exemplo, de todos os subconjuntos válidos do conjunto $\{0,\dots,2\}$, ou seja, $\{0\},\{1\},\{2\}, \{0,1\}, \{0,2\}$ e $\{1,2\}$, tem-se $2^{3-1}-1=3$ conjuntos que contêm o valor $2$. Por isso, a probabilidade atribuída a $p(\mathbf y|y)$ é uma uniforme, dando pesos iguais para todos os possíveis rótulos.
+
+Uma suposição implícita da distribuição na @eq-distribuicao é que ${\mathbf y}$ é condicionalmente independente de ${\mathbf x}$ dado ${\mathbf y}$. Ou seja, 
+
+$$
+p(\mathbf y|\mathbf x, y) = p(\mathbf y| y),
+$$
+
+para qualquer valor de $y$. Essa suposição significa que o valor do rótulo complementar não depende da imagem quando se sabe o rótulo da imagem. No caso dos Captchas, essa suposição é verificada, porque a imagem é simplesmente uma representação do rótulo, então a probabilidade do modelo inicial errar depende apenas do rótulo e não das distorções realizadas pela imagem gerada a partir do rótulo.
+
+Como comentado anteriormente, a partir da distribuição dos dados é possível reescrever a função de risco do problema completamente supervisionado em termos do problema de rótulos parciais [@feng2020, eq (6)]. A partir de um estimador desse risco, utiliza-se um método de aprendizado de máquinas (como redes neurais) para obter um classificador $\hat f$. Considerando que $f^*$ é a função obtida em um problema completamente supervisionado e seguindo algumas suposições adicionais, é possível demonstrar que 
+
+$$
+|\mathcal R(\hat f) - \mathcal R(f^*)|
+$$
+é limitada e converge para zero quando tamanho da amostra vai para infinito. Mais do que isso, é possível obter a taxa de convergência do risco, em função da complexidade de Rademacher. Os detalhes e a demonstração podem ser encontrados no artigo de @feng2020.
+
+Nas descrições dadas acima, a única suposição que não é satisfeita é a de que os valores de $\mathbf y$ são distribuídos uniformemente. Essa suposição é inválida porque os valores observados de $\mathbf y$ são resultado dos erros do modelo inicial aplicado ao oráculo e porque o número de tentativas geralmente é limitado. Como o modelo inicial não tem distribuição uniforme, o resultado também não é uniforme.
+
+O tipo de problema nesse caso é conhecido como *biased partial label*. Um dos artigos estudados apresenta uma solução para o caso em que o rótulo parcial é um rótulo complementar (ou seja, quando o Captcha aceita apenas um chute). Nesse caso as probabilidades $p(\mathbf y| y)$ podem ser organizadas em uma matriz de transição $\mathbf Q$, contendo as probabilidades de se obter um rótulo incorreto para cada possível valor do rótulo. Para resolver problemas desse tipo, é possível realizar um ajuste na função de predição que a torna a função de perda consistente e com taxa de convergência conhecida [@yu2018]:
 
 $$
 f_{\text{adj}} (\mathbf x) = \mathbf Q ^{\top}f(\mathbf x)
 $$
-
-O tipo de problema apresentado acima é conhecido como *biased complementary label*, ou seja, rótulo complementar com viés. Também é possível considerar um caso sem viés, ou seja, quando $p(\bar{\mathbf y}| y) = \frac{1}{|\mathcal A|^L-1}$ para todos os valores de $\mathbf y$. Esse caso também foi resolvido do ponto de vista teórico [@ishida2017]. As conclusões são parecidas, ou seja, é possível encontrar taxas de convergência para que o problema com rótulos complementares se aproxime de um problema com observações completas.
-
-Quando os rótulos complementares não apresentam viés, existe ainda uma extensão para rótulos complementares múltiplos [@feng2020a]. Neste caso, é possível derivar uma função de risco empírica que, novamente, converge para a função de risco do problema completamente supervisionado, além de apresentar taxas de convergência para essa função de risco.
 
 O caso do oráculo e dos Captchas é um problema com múltiplos rótulos complementares e com viés. Até o momento, não existe uma solução geral para este tipo de problema. No entanto, espera-se que as soluções para problemas desse tipo tenham taxas de convergência mais estreitas do que o caso de rótulos complementares, com ou sem viés, já que rótulos complementares múltiplos trazem mais informação do que rótulos complementares simples.
 
@@ -636,19 +681,24 @@ $$
 1 - p(y|\boldsymbol \theta),
 $$
 
-Considerando o rótulo complementar $\bar {\mathbf y}$ e a função $f$ dada pela rede neural que retorna um vetor $[f_y: y \in 1,\dots,|\mathcal A|^L]^\top$, a fórmula para descrever a função de perda é descrita da seguinte forma:
+Considere o rótulo parcial ${\mathbf y}$ e a função $g$, dada pela rede neural, que retorna um vetor de probabilidades $[g_y], y \in \mathcal A$. Os valores de $g_y$ somam 1 e têm os pesos relacionados a cada possível rótulo a partir da imagem $\mathbf x$. A fórmula para descrever a função de perda é descrita da seguinte forma:
 
 $$
-\mathcal L(f(\mathbf x), \bar {\mathbf y}) = -\log\left[1 - \sum_{y} {f_y}(\mathbf x) I(y\notin\bar {\mathbf y})\right]
+\mathcal L(g(\mathbf x), {\mathbf y}) = -\log\left[1 - \sum_{y \in \mathcal A} {g_y}(\mathbf x) I(y\notin {\mathbf y})\right]
 $$
-
-A função de perda proposta pode ser explicada de maneira intuitiva através de um exemplo. Considere um problema com apenas $10$ possíveis valores para o rótulo, com uma resposta multinomial, sem ser multivariada. Considere também que a rede neural retorna uma alta probabilidade, por exemplo, $0.99$, para o valor $j$, que o oráculo identificou como incorreta. Logo, $\mathbf {\bar y} = \{1,\dots,10\}\setminus j$, e a função de perda é dada por
+Por conta da função indicadora, a perda só é calculada nos pontos que estão de fora do rótulo parcial observado $\mathbf y$. Ou seja, o valor é calculado somente nos casos que o modelo inicial errou. A função de perda proposta pode ser explicada de maneira intuitiva através de exemplos. Considere um problema com apenas $10$ possíveis valores para o rótulo e uma resposta multinomial, sem ser multivariada, como considerado na @sec-aprendizado-estatistico. Considere também que a rede neural retorna uma alta probabilidade, por exemplo, $0.99$, para o valor $j$, que o oráculo identificou como incorreta. Logo, $\mathbf {\bar y} = \{1,\dots,10\}\setminus j$, e a função de perda é dada por
 
 $$
-\mathcal L(f(\mathbf x), \{1,\dots,10\}\setminus j) = -\log\left[1-{f_j}(\mathbf x)\right] = -\log\left[1-0.99 \right] = 4.61
+\mathcal L(g(\mathbf x), \{1,\dots,10\}\setminus j) = -\log\left[1-{g_j}(\mathbf x)\right] = -\log\left[1-0.99 \right] = 4.61
 $$
 
 Como é possível ver no exemplo, quanto maior a probabilidade dada a um rótulo identificado como incorreto pelo oráculo, mais a função de perda penaliza essa predição. Dessa forma, a função de perda consegue incorporar a informação dada pelo oráculo adequadamente.
+
+Considere, agora, que a rede neural retorna uma probabilidade pequena, por exemplo, $0.01$, para o valor $k$, que o oráculo identificou como incorreta. Logo, $\mathbf {\bar y} = \{1,\dots,10\}\setminus k$, e a função de perda é um valor pequeno:
+
+$$
+\mathcal L(g(\mathbf x), \{1,\dots,10\}\setminus k) = -\log\left[1-{g_k}(\mathbf x)\right] = -\log\left[1-0.01 \right] = 0.01.
+$$
 
 Quando o Captcha aceita múltiplos chutes, a mesma conta é válida, bastando subtrair as probabilidades de todos os rótulos incorretos. No final, o valor da função de perda é a soma das perdas para todas as observações do *minibatch*. A soma considera tanto as perdas calculadas com base nos rótulos corretos quanto as perdas calculadas com base nos rótulos incorretos.
 
@@ -756,7 +806,7 @@ A @fig-captcha-r mostra um exemplo de R-Captcha. O exemplo apresenta uma linha l
 
 ```{r}
 #| label: fig-captcha-r
-#| fig-cap: Exemplo de MNIST-Captcha
+#| fig-cap: Exemplo de R-Captcha
 #| fig-align: center
 #| out-width: 150px
 knitr::include_graphics("assets/img/captcha128c4a9c32e4_boy4.png")
@@ -848,7 +898,7 @@ Uma oportunidade que o oráculo pode oferecer é a possibilidade de testar mais 
 
 Neste momento, cabe uma nota sobre oráculos e força bruta. O poder de testar vários rótulos para o mesmo Captcha implica na possibilidade teórica de resolver um Captcha por força bruta. Bastaria testar todos os rótulos possíveis para acessar a página de interesse. Na prática, no entanto, essa estratégia não funciona, já que a quantidade de rótulos possíveis é muito grande para testar no site, seja por demorar muito tempo ou pelo site forçar a troca do desafio após a passagem de determinado tempo ou quantidade de tentativas.
 
-Voltando ao ciclo da raspagem, ao longo do procedimento de baixar imagens de Captchas e aplicar o oráculo, pelo menos duas operações devem ser implementadas: **acesso** e **teste**. A operação de acesso é responsável por preencher o formulário de busca e baixar o Captcha (passos 1, 2 e 3 da lista acima). A operação de teste é responsável por submeter um rótulo do Captcha e verificar retornar se o rótulo está correto ou incorreto (passos 5 e 6 da lista acima). O passo 4 pode ser realizado de forma unificada, pois não depende de interação com o site específico. Em alguns casos, as funções de acesso e teste precisam compartilhar parâmetros que contêm a sessão do usuário, para garantir que o teste envolva o mesmo Captcha da etapa de acesso.
+Voltando ao ciclo da raspagem, ao longo do procedimento de baixar imagens de Captchas e aplicar o oráculo, pelo menos duas operações devem ser implementadas: **acesso** e **teste**. A operação de acesso é responsável por preencher o formulário de busca e baixar o Captcha (passos 1, 2 e 3 da lista acima). A operação de teste é responsável por submeter um rótulo do Captcha e verificar se o rótulo está correto ou incorreto (passos 5 e 6 da lista acima). O passo 4 pode ser realizado de forma unificada, pois não depende de interação com o site específico. Em alguns casos, as funções de acesso e teste precisam compartilhar parâmetros que contêm a sessão do usuário, para garantir que o teste envolva o mesmo Captcha da etapa de acesso.
 
 Os Captchas foram anotados manualmente com um procedimento que foi chamado de semi-automático, definido a seguir. No pacote `{captchaDownload}` (ver Apêndice [-@sec-pacote-download]), foram desenvolvidas ferramentas para baixar e organizar cada Captcha, utilizando o oráculo para garantir que as imagens eram corretamente anotadas.
 
