update versão online

--- a/inst/book/assets/tex/extras/fonts.tex
+++ b/inst/book/assets/tex/extras/fonts.tex
@@ -201,7 +201,12 @@
   \usepackage{libertinust1math}
 \fi
 
-\setmathfont{Latin Modern Math}
+% \setmathfont{Latin Modern Math}
+% \setmathfont[range=\setminus]{Asana-Math.otf}
+
+% \setmathfont{STIXTwoMath-Regular.otf}
+\setmathfont{latinmodern-math.otf}
+% \setmathfont[range=\mathcal]{Latin Modern Math}
 \setmathfont[range=\setminus]{Asana-Math.otf}
 
 % \setmathfont{NewCMMath-Book.otf}
