--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -484,11 +484,11 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    L & \text{comprimento do Captcha}\\
    \mathcal A & \text{alfabeto (quantidade de caracteres distintos possíveis)}\\
    y & \text{variável resposta (observada), na forma de matriz}\\
+   \mathbf y & \text{variável resposta na forma de rótulo parcial}\\
    \mathcal U & \text{distribuição uniforme}\\
    X & \text{variável aleatória representando a imagem}\\
    Y & \text{variável aleatória representando a matriz-resposta}\\
-   f, g, h & \text{função preditiva, que leva uma imagem a uma estimativa para } Y\\
-   \hat Y & \text{estimativa para } Y\\
+   f, g, h & \text{função que leva uma imagem a uma estimativa para } y\\
    \mathcal Y & \text{valores possíveis da variável resposta}\\
    \mathcal O & \text{função do oráculo}\\
    K & \text{Kernel (núcleo) em uma operação de convolução}\\
@@ -501,8 +501,6 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    m,v,\hat m, \hat v, \beta_2, \beta_2, \epsilon & \text{parâmetros do otimizador ADAM}\\
    \mathcal L & \text{função de perda}\\
    \mathcal R & \text{função de risco}\\
-   Q & \text{matriz de transição em um modelo com rótulos complementares}\\
-   \hat f & \text{estimativa de uma função preditiva}\\
    \bar y & \text{observação complementar de } y \text{ (ou seja, tudo menos } y \text{)}
 \end{array}
 \end{displaymath}
