melhores fontes e ajustes no gráfico

--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -157,8 +157,8 @@ $endif$
     titlept={Resolvendo Captchas},
     titleen={Solving Captchas},
     % Opcional, mas se houver deve existir nas duas línguas
-    subtitlept={usando aprendizado parcialmente supervisionado},
-    subtitleen={using partial supervised learning},
+    subtitlept={usando raspagem de dados e aprendizado fracamente supervisionado},
+    subtitleen={using web scraping and weak supervised learning},
 }
 
 \author{Julio Adolfo Zucon Trecenti}
@@ -501,7 +501,7 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    m,v,\hat m, \hat v, \beta_2, \beta_2, \epsilon & \text{parâmetros do otimizador ADAM}\\
    \mathcal L & \text{função de perda}\\
    \mathcal R & \text{função de risco}\\
-   \bar y & \text{observação complementar de } y \text{ (ou seja, tudo menos } y \text{)}
+   \bar {\mathbf y} & \text{observação complementar de } y \text{ (ou seja, tudo menos } y \text{)}
 \end{array}
 \end{displaymath}
 
