--- a/inst/book/assets/bib/captcha.bib
+++ b/inst/book/assets/bib/captcha.bib
@@ -491,6 +491,17 @@
   file = {C\:\\Users\\julio\\Zotero\\storage\\MJJWZ678\\Michener et al. - 2015 - Estado brasileiro e transparência avaliando a apli.pdf}
 }
 
+@article{migonDynamicModels2005,
+  title = {Dynamic Models},
+  author = {Migon, Helio S. and Gamerman, Dani and Lopes, Hedibert F. and Ferreira, Marco AR},
+  year = {2005},
+  journal = {Handbook of statistics},
+  volume = {25},
+  pages = {553--588},
+  publisher = {{Elsevier}},
+  file = {C\:\\Users\\julio\\Zotero\\storage\\SYGVV4FT\\Migon et al. - 2005 - Dynamic models.pdf;C\:\\Users\\julio\\Zotero\\storage\\UZAFDZY3\\S0169716105250198.html}
+}
+
 @inproceedings{moriRecognizingObjectsAdversarial2003,
   title = {Recognizing Objects in Adversarial Clutter: {{Breaking}} a Visual {{CAPTCHA}}},
   shorttitle = {Recognizing Objects in Adversarial Clutter},
